--- a/spiders-treatment-in-melbourne.html
+++ b/spiders-treatment-in-melbourne.html
@@ -46,20 +46,20 @@
                         Services
                     </a>
                     <div class="dropdown-menu">
-              <a class="dropdown-item" href="cockroach-treatment-in-melbourne.html">Cockroach Treatment</a>
-              <a class="dropdown-item" href="ants-treatment-in-melbourne.html">Ants Treatment</a>
-              <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
-              <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
-              <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
-              <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
-              <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps Treatment</a>
-              <a class="dropdown-item" href="possums-treatment-in-melbourne.html">Possums Treatment</a>
-              <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
-              <a class="dropdown-item" href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
-              <a class="dropdown-item" href="termites-treatment-in-melbourne.html">Termites Treatment</a>
-              <a class="dropdown-item" href="birdmites-treatment-in-melbourne.html">Bird MitesTreatment</a>
-              <a class="dropdown-item" href="carcass-dropping-removal-in-melbourne.html">Carcass/Dropping Removal</a>
-            </div>
+        <a class="dropdown-item" href="cockroach-treatment-in-melbourne.html">Cockroach Treatment</a>
+        <a class="dropdown-item" href="ants-treatment-in-melbourne.html">Ants Treatment</a>
+        <a class="dropdown-item" href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
+        <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
+        <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
+        <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
+        <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
+        <a class="dropdown-item" href="possums-treatment-in-melbourne.html">Possums Removal</a>
+        <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
+        <a class="dropdown-item" href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
+        <a class="dropdown-item" href="termites-treatment-in-melbourne.html">Termites Treatment</a>
+        <a class="dropdown-item" href="birdmites-treatment-in-melbourne.html">Bird MitesTreatment</a>
+        <a class="dropdown-item" href="carcass-dropping-removal-in-melbourne.html">Carcass/Dropping Removal</a>
+      </div>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link" href="rates.html">Rates</a>
@@ -107,20 +107,66 @@
                     <div class="col-sm-5">
                         <img src="./images/services/spider.jpg" alt="" class="img-fluid">
                     </div>
-                    <div class="col-sm-7 d-flex flex-column justify-content-center align-items-start">
-                        <!-- <h3 class="mukta text-faded"><strong>Effects of Cockroaches at Your Home/Office</strong></h3> -->
-                        <p>
-                            Formula Pest Control, Melbourne - We at Formula Pest Control take care of Spiders with very effective approach. Spiders Treatment is one of the major services we have been providing for a while now with high success rate. We are very efficient at treating the Spiders. Although Spiders being good for the environment, many people do have an inherent fear of spiders, known as Arachnophobia which can have effects like feelings of uneasiness and can also lead to panic attacks. As some Spiders can be venomous, it is really important for you to take care of it once you find out about Spiders in your surroundings. We need to be cautious and get rid of them from our home/office for good. So if you need Spiders Treatment done for your home or office, please call us now and we are happy to help you. We are expert in Residential Spiders Treatment and Commercial Spiders Treatment.</p>
-                            <p class="text-left">
-                                <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
-                            </p>
+                    <div class="col-sm-7">
+                        <h3 class="mukta text-faded"><strong>Effects of Spiders at Your Home/Office</strong></h3>
+                        <p>More than 40,000 species of spiders have been identified in the world. Spider bites is a common problem among people, however few of them are harmful but delay in treatment can cause death. Since the spider bites are risk full to human, they should be taken seriously, especially in endemic areas. Three important syndromes caused by spider bites are loxoscelism, latrodectism and funnel web spider syndrome. Many treatments are used but much more studies should have done to decrease the mortality.</p>
+                        <p>Many different kinds of spiders live in and around dwellings. Most spider bites cause minor swelling, inflammation, and itching. However, bites from venomous spiders can cause more severe reactions. The venom of spiders releases neurotoxin which is poisonous to the nervous system. The venom of brown recluse spiders causes necrosis (damage and breakdown) of skin and tissue. The toxin will cause swelling, tissue death, and destruction of red blood cells. A scab will form over the site and may leave a scar. The venom may also affect the eyes, causing swelling or drooping of the eyelid and other effects. Tarantula hairs contain a toxin that can cause a serious skin rash, an allergic reaction, and possibly even anaphylactic shock.</p>
                     </div>
                     <br>
+                    <div class="col-sm-12">
+                        <br>
+                        <p>The diagnosis and necessary treatment depend on the type of spider. A spider bite often has a white ring around it. These spiders build their webs under logs, plants, or rocks, in dark places in garages and outhouses and most of the time in the corners around your Home/Office.</p>
+                        <p class="text-center">
+                            <a href="#" class="main-button reverse-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        </p>
+                    </div>
                 </div>
                     <!-- end row -->
                 </div>
             </section>
-            </main>
+
+            <section>
+                <div class="container py-5">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
+                            <h3 class="text-faded mukta text-uppercase"><strong>Why you need Spiders Treatment?</strong></h3>
+                            <br>
+                            <p>Spiders are one of the most common household pests with about 2 out of 3 Melbourne homes hosting spiders at least once a year. Interestingly noted, the fear of spiders is one of the most prevalent phobias in the World.</p> 
+                            <p>Spiders may look harmless while looking from away but if it bites you, then you're sure to get some symptoms right away. Plus it looks very uncomfortable when you have guests coming over or some important client is coming over if you are in an office. Spiders can crawl in your kitchen and might contaminate the food you would be eating afterwards. Spider bites from a poisonous spider feels like a sharp pain ,like a needle puncture. After 15 minutes to an hour there will be muscular cramps. Bites are rarely fatal, but you should seek medical attention. After bitten from other poisonous spiders, the pain is more intense, and over the next few days large sores form leaving a disfiguring scar.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="bg-light">
+                <div class="container py-5">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
+                            <h3 class="text-faded mukta text-uppercase"><strong>Our Work Process for Spiders Removal</strong></h3>
+                            <br>
+                            <p>
+                                There are various species of spiders found throughout Melbourne and Australia in general. While spiders in general can be beneficial in the elimination of other pests, their bites should be avoided. 
+                            </p> 
+                            <p>
+                                We at Formula Pest Control take care of Spiders with very effective approach. Spiders Treatment is one of the major services we have been providing for a while now with high success rate. We are very efficient at treating the Spiders. Although Spiders being good for the environment, many people do have an inherent fear of spiders, known as Arachnophobia which can have effects like feelings of uneasiness and can also lead to panic attacks. As some Spiders can be venomous, it is really important for you to take care of it once you find out about Spiders in your surroundings. We need to be cautious and get rid of them from our home/office for good. So if you need Spiders Treatment done for your home or office, please call us now and we are happy to help you. We are expert in Residential Spiders Treatment and Commercial Spiders Treatment.
+                            </p>
+                            <p>
+                                When treating for a spider infestation, we focus our treatments on the interior, exterior, and underside of a home or building. It is important to note that homes located near wooded areas or bodies of water tend to have higher populations and varieties of spiders. Overgrown vegetation is high on the list of conducive conditions for spider infestations. Vegetation that is near or touching a home is extremely attractive for spiders, as it allows for easy web building. Whenever possible, we recommend trimming vegetation away from the home or building.
+                            </p>
+                            <p>
+                                As insects are a primary food source, spiders tend to populate areas of high insect activity. Our spider treatment process will focus on both eliminating the spider infestation and minimizing their food source.
+                            </p>
+                            <p>We provide 24 hours service to our customers in Melbourne for Spiders treatment to residential and commercial properties. Emergency Spiders treatment service is also given to our customers. Call us today for a free quote. It is always better to act quickly rather than wait.</p>
+                            <br>
+                            <hr>
+                            <br>
+                            <p> <strong>Want An Effective ans Swift Measures for your Home or Business ?</strong></p>
+                            <a href="#" class="main-button"><i class="fa fa-phone-alt" aria-hidden="true"></i> &nbsp; &nbsp;Call Us Now</a>
+                        </div>
+                    </div>
+                </div>
+            </section>        
+    </main>
             
             <!-- Footer -->
             <footer class="custom-footer page-footer font-small unique-color-dark pt-5">
@@ -168,44 +214,44 @@
                             <div class="row">
                                 <ul>
                                     <li>
-                                        <a href="#!">Cockroach Treatment</a>
+                                        <a href="cockroach-treatment-in-melbourne.html">Cockroach Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Ants Treatment</a>
+                                        <a href="ants-treatment-in-melbourne.html">Ants Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Bedbugs Treatment</a>
+                                        <a href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Spiders Treatment</a>
+                                        <a href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Flea Treatment</a>
+                                        <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Rats Treatment</a>
+                                        <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Wasps Treatment</a>
+                                        <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
                                     </li>
                                     
                                     <li>
-                                        <a href="#!">Possums Treatment</a>
+                                        <a href="possums-treatment-in-melbourne.html">Possums Removal</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Cloth Moth Treatment</a>
+                                        <a href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Carpet Beetle Treatment</a>
+                                        <a href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Termites Treatment</a>
+                                        <a href="termites-treatment-in-melbourne.html">Termites Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Bird Mites Treatment</a>
+                                        <a href="birdmites-treatment-in-melbourne.html">Bird Mites Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Carcass/Dropping Removal</a>
+                                        <a href="carcass-dropping-removal-in-melbourne.html">Carcass/Dropping Removal</a>
                                     </li>
                                 </ul>
                             </div>
