--- a/cockroach-treatment-in-melbourne.html
+++ b/cockroach-treatment-in-melbourne.html
@@ -222,44 +222,44 @@
                             <div class="row">
                                 <ul>
                                     <li>
-                                        <a href="#!">Cockroach Treatment</a>
+                                        <a href="cockroach-treatment-in-melbourne.html">Cockroach Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Ants Treatment</a>
+                                        <a href="ants-treatment-in-melbourne.html">Ants Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Bedbugs Treatment</a>
+                                        <a href="bedbugs-treatment-in-melbourne.html">Bedbugs Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Spiders Treatment</a>
+                                        <a href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Flea Treatment</a>
+                                        <a href="flea-treatment-in-melbourne.html">Flea Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Rats Treatment</a>
+                                        <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Wasps Treatment</a>
+                                        <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
                                     </li>
                                     
                                     <li>
-                                        <a href="#!">Possums Treatment</a>
+                                        <a href="possums-treatment-in-melbourne.html">Possums Removal</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Cloth Moth Treatment</a>
+                                        <a href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Carpet Beetle Treatment</a>
+                                        <a href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Termites Treatment</a>
+                                        <a href="termites-treatment-in-melbourne.html">Termites Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Bird Mites Treatment</a>
+                                        <a href="birdmites-treatment-in-melbourne.html">Bird Mites Treatment</a>
                                     </li>
                                     <li>
-                                        <a href="#!">Carcass/Dropping Removal</a>
+                                        <a href="carcass-dropping-removal-in-melbourne.html">Carcass/Dropping Removal</a>
                                     </li>
                                 </ul>
                             </div>
