--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <a class="dropdown-item" href="spiders-treatment-in-melbourne.html">Spiders Treatment</a>
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
         <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
-        <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps Treatment</a>
-        <a class="dropdown-item" href="possums-treatment-in-melbourne.html">Possums Treatment</a>
+        <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
+        <a class="dropdown-item" href="possums-treatment-in-melbourne.html">Possums Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
         <a class="dropdown-item" href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
         <a class="dropdown-item" href="termites-treatment-in-melbourne.html">Termites Treatment</a>
@@ -97,25 +97,25 @@
             <!-- <img alt="title_image" src="./images/banner/p4.jpg" class="d-block w-100"> -->
             <div class="carousel-caption">
               <h1 data-animation="animate__animated animate__fadeInUp">Rats Treatment</h1>
-              <p data-animation="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, earum unde! Quos accusantium amet provident illum. Dicta tempore inventore nemo quasi soluta excepturi voluptatibus labore officiis tenetur. Minus, cumque sit?</p>
+              <p data-animation="animate__animated animate__fadeInUp">We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency Rats Treatment Service is also given to our customers. Call us today for a free quote.</p>
               <!--<a role="button" class="btn btn-pri data-animation="animate__animated animate__fadeInUp"mary custom-button">Contact Us</a>-->
-              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Contact Us</a>
+              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone" aria-hidden="true"></i></a>
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('./images/banner/p5.jpg');">
+          <div class="carousel-item" style="background-image: url('./images/banner/p2.jpg');">
             <!-- <img alt="title_image" src="./images/banner/p5.jpg" class="d-block w-100"> -->
             <div class="carousel-caption">
               <h1 data-animation="animate__animated animate__fadeInUp">Cockroach Treatment</h1>
-              <p data-animation="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, earum unde! Quos accusantium amet provident illum. Dicta tempore inventore nemo quasi soluta excepturi voluptatibus labore officiis tenetur. Minus, cumque sit?</p>
-              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Contact Us</a>
+              <p data-animation="animate__animated animate__fadeInUp">We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency Cockroach Treatment Service is also given to our customers. Call us today for a free quote.</p>
+              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone" aria-hidden="true"></i></a>
             </div>
           </div>
           <div class="carousel-item" style="background-image: url('./images/banner/p1.jpg');">
             <!-- <img alt="title_image" src="./images/banner/p1.jpg" class="d-block w-100"> -->
             <div class="carousel-caption">
               <h1 data-animation="animate__animated animate__fadeInUp">Ants Treatment</h1>
-              <p data-animation="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, earum unde! Quos accusantium amet provident illum. Dicta tempore inventore nemo quasi soluta excepturi voluptatibus labore officiis tenetur. Minus, cumque sit?</p>
-              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Contact Us</a>
+              <p data-animation="animate__animated animate__fadeInUp">We provide 24 hours service to our customers in Melbourne for cockroach treatment to residential and commercial properties. Emergency Ants Treatment Service is also given to our customers. Call us today for a free quote.</p>
+              <a href="#" class="main-button white-button" data-animation="animate__animated animate__fadeInUp">Call Now &nbsp;<i class="fa fa-phone" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Cockroach Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="main-button">Read More</a>
+                <a href="cockroach-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Ants Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="main-button">Read More</a>
+                <a href="ants-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -200,7 +200,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Bedbugs Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="main-button">Read More</a>
+                <a href="bedbugs-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -212,7 +212,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Spiders Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="main-button">Read More</a>
+                <a href="spiders-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -224,7 +224,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Flea Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="main-button">Read More</a>
+                <a href="flea-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Rats Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="main-button">Read More</a>
+                <a href="rats-treatment-in-melbourne.html" class="main-button">Read More</a>
               </div>
             </div>
           </div>
@@ -246,9 +246,9 @@
                 <img class="" src="./images/services/wasp.png" alt="Card image cap">
               </div>
               <div class="card-body">
-                <h5 class="card-title apple-font">Wasps Treatment</h5>
+                <h5 class="card-title apple-font">Wasps/Bees Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="wasps-treatment-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -258,9 +258,9 @@
                 <img class="" src="./images/services/possum.png" alt="Card image cap">
               </div>
               <div class="card-body">
-                <h5 class="card-title apple-font">Possums Treatment</h5>
+                <h5 class="card-title apple-font">Possums Removal</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="possums-treatment-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -272,7 +272,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Cloth Moth Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="clothmoth-treatment-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -284,7 +284,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Carpet Beetle Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="carpet-beetle-treatment-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -296,7 +296,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Termites Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="termites-treatment-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -308,7 +308,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Bird Mites Treatment</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="birdmites-treatment-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -320,7 +320,7 @@
               <div class="card-body">
                 <h5 class="card-title apple-font">Carcass/Dropping Removal</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="hbtn hb-fill-on-rev my-3">Read More</a>
+                <a href="carcass-dropping-removal-in-melbourne.html" class="main-button my-3">Read More</a>
               </div>
             </div>
           </div>
@@ -348,7 +348,7 @@
           <div class="col-lg-6 pt-5" data-wow-delay="0.6s">
             <p>When you have a pest problem or want to protect your home from future invaders, we apply our science-based approach to help identify the root of your problem and implement a solution made expressly for your home. Formula Pest Control is a top rated and well respected melbourne based Exterminator, that provides industry leading service at competitive prices.</p>
             <div class="text-left">
-              <a href="#" class="main-button">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp; <a href="#" class="main-button reverse-button"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp; Call Us Now</a>
+              <a href="about-us.html" class="main-button">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp; <a href="#" class="main-button reverse-button"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp; Call Us Now</a>
             </div>
           </div>
         </div>
@@ -419,7 +419,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section-title text-center">
-              <a href="#" class="main-button">View Full Rates <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+              <a href="rates.html" class="main-button">View Full Rates <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -541,11 +541,11 @@
                   <a href="rats-treatment-in-melbourne.html">Rats Treatment</a>
                 </li>
                 <li>
-                  <a href="wasps-treatment-in-melbourne.html">Wasps Treatment</a>
+                  <a href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
                 </li>
                 
                 <li>
-                  <a href="possums-treatment-in-melbourne.html">Possums Treatment</a>
+                  <a href="possums-treatment-in-melbourne.html">Possums Removal</a>
                 </li>
                 <li>
                   <a href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
