Homepage Testimonials Content Added

--- a/index.html
+++ b/index.html
@@ -438,16 +438,16 @@
                 <div class="carousel-inner">
                   <div class="carousel-item text-center active">
                     <div class="d-flex flex-column align-items-center">
-                      <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, consectetur adipiscing elit varius quam at, luctus dui. Mauris magna metus consectetur adipiscing elit.</p>
-                      <h5 class=""><strong class="text-warning text-uppercase apple-font">-SARA A. MORAN</strong></h5>
-                      <h6 class="m-0">Web Developer</h6>
+                      <p class="mb-5">Very promptly responded with the quote. Two days later did the job. Friendly and reliable. Quickly completed the job. Happy to recommend and will hire again in the future.</p>
+                      <h5 class=""><strong class="text-warning text-uppercase apple-font">-INNA</strong></h5>
+                      <h6 class="m-0"><a class="text-light" href="https://hipages.com.au/connect/formulapestcontrol?fbclid=IwAR0LCXXWAsOYvs6TWVKZYrMAatFnKKILbNSjx3mMnRyF2WDLONpBV1u1WRI" target="_blank" style="text-decoration: underline;">HiPages</a></h6>
                     </div>
                   </div>
                   <div class="carousel-item text-center">
                     <div class="d-flex flex-column align-items-center">
-                      <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, consectetur adipiscing elit varius quam at, luctus dui. Mauris magna metus consectetur adipiscing elit.</p>
-                      <h5 class=""><strong class="text-warning text-uppercase apple-font">-STEVE FONSI</strong></h5>
-                      <h6 class="m-0">Web Designer</h6>
+                      <p class="mb-5">Formula Pest Control responded to my request for cockroach treatment very quickly. Eddie was professional and efficient, and also provided helpful tips on how to keep cockroaches out in the future. Definitely recommend.</p>
+                      <h5 class=""><strong class="text-warning text-uppercase apple-font">-ALLISON</strong></h5>
+                      <h6 class="m-0"><a class="text-light" href="https://www.oneflare.com.au/b/formula-pest-control?fbclid=IwAR0tT4BNYgy2PGaCFwcKUAx122U2BpJ60H241ARbwOAOldlsiiVpqQiFG8k" target="_blank" style="text-decoration: underline;">OneFlare</a></h6>
                     </div>
                     <!--<h5 class=""><strong class="text-warning text-uppercase apple-font">STEVE FONSI</strong></h5>
                       <h6 class="m-0">Web Designer</h6>
@@ -455,17 +455,17 @@
                     </div>
                     <div class="carousel-item text-center">
                       <div class="d-flex flex-column align-items-center">
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, consectetur adipiscing elit varius quam at, luctus dui. Mauris magna metus consectetur adipiscing elit.</p>
-                        <h5 class=""><strong class="text-warning text-uppercase apple-font">-SANDRA M. GARCIA</strong></h5>
-                        <h6 class="m-0">Seo Analyst</h6>
+                        <p class="mb-5">The noise in my ceiling has ceased and I believe it is because the problem has been successfully dealt with, for which I am exceedingly grateful. I will be calling Ajay in for any and all future problems that I may encounter. Thank you.</p>
+                        <h5 class=""><strong class="text-warning text-uppercase apple-font">-DIANA</strong></h5>
+                        <h6 class="m-0"><a class="text-light" href="https://www.oneflare.com.au/b/formula-pest-control?fbclid=IwAR0tT4BNYgy2PGaCFwcKUAx122U2BpJ60H241ARbwOAOldlsiiVpqQiFG8k" target="_blank" style="text-decoration: underline;">OneFlare</a></h6>
                       </div>
                     </div>
                   </div>
-                  <a class="carousel-control-prev ml-0" href="#carouselTestimonial" role="button" data-slide="prev" style="left: -30px;">
+                  <a class="carousel-control-prev ml-0" href="#carouselTestimonial" role="button" data-slide="prev" id="testimonial-control-left">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="carousel-control-next mr-0" href="#carouselTestimonial" role="button" data-slide="next" style="right: -30px;">
+                  <a class="carousel-control-next mr-0" href="#carouselTestimonial" role="button" data-slide="next" id="testimonial-control-right">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
