--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
         <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
-        <a class="dropdown-item" href="possums-treatment-in-melbourne.html">Possums Removal</a>
+        <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
         <a class="dropdown-item" href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
         <a class="dropdown-item" href="termites-treatment-in-melbourne.html">Termites Treatment</a>
@@ -259,7 +259,7 @@
                 </li>
                 
                 <li>
-                  <a href="possums-treatment-in-melbourne.html">Possums Removal</a>
+                  <a href="possum-removal-in-melbourne.html">Possum Removal</a>
                 </li>
                 <li>
                   <a href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
