--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a class="dropdown-item" href="flea-treatment-in-melbourne.html">Flea Treatment</a>
         <a class="dropdown-item" href="rats-treatment-in-melbourne.html">Rats Treatment</a>
         <a class="dropdown-item" href="wasps-treatment-in-melbourne.html">Wasps/Bees Treatment</a>
-        <a class="dropdown-item" href="possums-treatment-in-melbourne.html">Possums Removal</a>
+        <a class="dropdown-item" href="possum-removal-in-melbourne.html">Possum Removal</a>
         <a class="dropdown-item" href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
         <a class="dropdown-item" href="carpet-beetle-treatment-in-melbourne.html">Carpet Beetle Treatment</a>
         <a class="dropdown-item" href="termites-treatment-in-melbourne.html">Termites Treatment</a>
@@ -362,7 +362,7 @@
       <div class="container py-3">
         <div class="row">
           <div class="col-lg-6">
-            <img alt="title_image" src="./images/about-us/pexels-matilda-wormwood-4099267.jpg" class="img-fluid"/>
+            <img alt="title_image" src="./images/about-us/pexels-1.jpg" class="img-fluid"/>
           </div>
           <div class="col-lg-6 pt-5" data-wow-delay="0.6s">
             <p>When you have a pest problem or want to protect your home from future invaders, we apply our science-based approach to help identify the root of your problem and implement a solution made expressly for your home. Formula Pest Control is a top rated and well respected melbourne based Exterminator, that provides industry leading service at competitive prices.</p>
@@ -564,7 +564,7 @@
                 </li>
                 
                 <li>
-                  <a href="possums-treatment-in-melbourne.html">Possums Removal</a>
+                  <a href="possum-removal-in-melbourne.html">Possum Removal</a>
                 </li>
                 <li>
                   <a href="clothmoth-treatment-in-melbourne.html">Cloth Moth Treatment</a>
